--- a/package.json
+++ b/package.json
@@ -5,8 +5,23 @@
   "main": "transpile-watch.js",
   "scripts": {},
   "author": "Arthur Clemens <arthurclemens@gmail.com> (http://visiblearea.com)",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "chokidar": "^1.2.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ArthurClemens/transpile-watch.git"
+  },
+  "author": "Arthur Clemens",
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "http://www.opensource.org/licenses/mit-license.php"
+    }
+  ],
+  "bugs": {
+    "url": "https://github.com/ArthurClemens/transpile-watch/issues"
+  },
+  "homepage": "https://github.com/ArthurClemens/transpile-watch"
 }
