--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "transpile-watch",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Utility script for transpiling directories",
-  "main": "transpile-watch.js",
+  "main": "lib/transpile-watch.js",
   "scripts": {},
   "author": "Arthur Clemens <arthurclemens@gmail.com> (http://visiblearea.com)",
   "license": "MIT",
