--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "transpile-watch",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Utility script for transpiling directories",
   "main": "lib/transpile-watch.js",
-  "scripts": {},
+  "scripts": {
+    "test": "mocha test"
+  },
   "author": "Arthur Clemens",
   "license": "MIT",
   "dependencies": {
